Add user store & remove ngrx-store dev-tools.
