# src/api/swagger.json
@@ -801,10 +801,6 @@
           "jwtToken": {
             "type": "string",
             "nullable": true
-          },
-          "refreshToken": {
-            "type": "string",
-            "nullable": true
           }
         },
         "additionalProperties": false
